Update AIDE seal requirement
The component doesn't support this feature.

--- a/controls/anssi.yml
+++ b/controls/anssi.yml
@@ -1487,7 +1487,7 @@ controls:
       of the one on which the sealing is done.
       Check section "Database and config signing in AIDE manual"
       https://aide.github.io/doc/#signing
-    status: documentation
+    status: does not meet
 
   - id: R81
     levels:
