--- a/controls/anssi.yml
+++ b/controls/anssi.yml
@@ -1337,9 +1337,70 @@ controls:
     title: Logging activity by auditd
     description: >-
       The logging of the system activity must be done through the auditd service.
-    status: supported
-    # rules: TBD
-    # TODO: add rules
+    status: automated
+    rules:
+    - audit_rules_sysadmin_actions
+
+    - audit_rules_login_events_faillock
+    - audit_rules_login_events_lastlog
+
+    - audit_rules_session_events
+
+    - audit_rules_time_adjtimex
+    - audit_rules_time_clock_settime
+    - audit_rules_time_stime
+    - audit_rules_time_watch_localtime
+
+    - audit_rules_mac_modification
+
+    - audit_rules_networkconfig_modification
+
+    - audit_rules_dac_modification_chmod
+    - audit_rules_dac_modification_chown
+    - audit_rules_dac_modification_fchmod
+    - audit_rules_dac_modification_fchmodat
+    - audit_rules_dac_modification_fchown
+    - audit_rules_dac_modification_fchownat
+    - audit_rules_dac_modification_fremovexattr
+    - audit_rules_dac_modification_fsetxattr
+    - audit_rules_dac_modification_lchown
+    - audit_rules_dac_modification_lremovexattr
+    - audit_rules_dac_modification_lsetxattr
+    - audit_rules_dac_modification_removexattr
+    - audit_rules_dac_modification_setxattr
+
+    - audit_rules_unsuccessful_file_modification_creat
+    - audit_rules_unsuccessful_file_modification_ftruncate
+    - audit_rules_unsuccessful_file_modification_open
+    - audit_rules_unsuccessful_file_modification_openat
+    - audit_rules_unsuccessful_file_modification_truncate
+
+    - audit_rules_usergroup_modification_group
+    - audit_rules_usergroup_modification_gshadow
+    - audit_rules_usergroup_modification_opasswd
+    - audit_rules_usergroup_modification_passwd
+    - audit_rules_usergroup_modification_shadow
+
+    - audit_rules_media_export
+    - audit_rules_dac_modification_umount2
+
+    - audit_rules_privileged_commands
+
+    - audit_rules_file_deletion_events_rename
+    - audit_rules_file_deletion_events_renameat
+    - audit_rules_file_deletion_events_rmdir
+    - audit_rules_file_deletion_events_unlink
+    - audit_rules_file_deletion_events_unlinkat
+
+    - audit_rules_kernel_module_loading_delete
+    - audit_rules_kernel_module_loading_init
+    - audit_rules_kernel_module_loading_finit
+    - audit_rules_privileged_commands_insmod
+    - audit_rules_privileged_commands_modprobe
+    - audit_rules_privileged_commands_rmmod
+    - audit_rules_privileged_commands_kmod
+
+    - audit_rules_immutable
 
   - id: R77
     levels:
