Move hidepid out of selected rules
hidepid can cause problems with PolicyKit and D-Bus.

--- a/controls/anssi.yml
+++ b/controls/anssi.yml
@@ -534,10 +534,6 @@ controls:
     - mount_option_home_nosuid
     - mount_option_home_noexec
 
-    # /proc hidepid = 2 Contains process information and the system
-    - mount_option_proc_hidepid
-    - var_mount_option_proc_hidepid=2
-
     # /usr nodev Contains the majority of utilities and system files
     - partition_for_usr
 
@@ -555,6 +551,11 @@ controls:
     - partition_for_var_tmp
     - mount_option_var_tmp_nosuid
     - mount_option_var_tmp_noexec
+
+    related_rules:
+    # /proc hidepid = 2 Contains process information and the system
+    - mount_option_proc_hidepid
+    - var_mount_option_proc_hidepid=2
 
   - id: R29
     levels:
