--- a/linux_os/guide/services/imap/disabling_cyrus-imapd/package_cyrus-imapd_removed/rule.yml
+++ b/linux_os/guide/services/imap/disabling_cyrus-imapd/package_cyrus-imapd_removed/rule.yml
@@ -1,6 +1,6 @@
 documentation_complete: true
 
-prodtype: rhel8,rhel9
+prodtype: rhel8,rhel9,ubuntu2004,ubuntu2204
 
 title: 'Uninstall cyrus-imapd Package'
 
@@ -20,6 +20,8 @@ identifiers:
 references:
     cis@rhel8: 2.2.11
     cis@rhel9: 2.2.9
+    cis@ubuntu2004: 2.2.11
+    cis@ubuntu2204: 2.2.10
 
 {{{ complete_ocil_entry_package(package="cyrus-imapd") }}}
 
