add missing CCEs to rules used in ANSSI profiles

--- a/linux_os/guide/system/network/network-ipv6/disabling_ipv6/sysctl_net_ipv6_conf_default_disable_ipv6/rule.yml
+++ b/linux_os/guide/system/network/network-ipv6/disabling_ipv6/sysctl_net_ipv6_conf_default_disable_ipv6/rule.yml
@@ -18,6 +18,7 @@ severity: medium
 identifiers:
     cce@rhel7: CCE-85975-1
     cce@rhel8: CCE-86004-9
+    cce@rhel9: CCE-90764-2
 
 references:
     cis-csc: 11,14,3,9
