--- a/linux_os/guide/system/auditing/auditd_configure_rules/audit_dac_actions/audit_rules_dac_modification_umount2/rule.yml
+++ b/linux_os/guide/system/auditing/auditd_configure_rules/audit_dac_actions/audit_rules_dac_modification_umount2/rule.yml
@@ -27,6 +27,8 @@ rationale: |-
 severity: medium
 
 identifiers:
+    cce@rhel7: CCE-90777-4
+    cce@rhel8: CCE-90776-6
     cce@rhel9: CCE-88570-7
     cce@sle12: CCE-83219-6
     cce@sle15: CCE-91250-1
