--- a/linux_os/guide/system/bootloader-grub2/grub2_nosmap_argument_absent/rule.yml
+++ b/linux_os/guide/system/bootloader-grub2/grub2_nosmap_argument_absent/rule.yml
@@ -22,6 +22,7 @@ rationale: |-
 severity: medium
 
 identifiers:
+    cce@rhel7: CCE-90773-3
     cce@rhel8: CCE-87345-5
     cce@rhel9: CCE-88345-4
 
