--- a/linux_os/guide/system/bootloader-grub2/grub2_spectre_v2_argument/rule.yml
+++ b/linux_os/guide/system/bootloader-grub2/grub2_spectre_v2_argument/rule.yml
@@ -23,6 +23,7 @@ rationale: |-
 severity: high
 
 identifiers:
+    cce@rhel7: CCE-90763-4
     cce@rhel8: CCE-89345-3
     cce@rhel9: CCE-90345-0
 
