OCP4 STIG: Fix status of SRG-APP-000360-CTR-000815

--- a/controls/srg_ctr/SRG-APP-000360-CTR-000815.yml
+++ b/controls/srg_ctr/SRG-APP-000360-CTR-000815.yml
@@ -4,7 +4,7 @@ controls:
   - medium
   title: {{{ full_name }}} must provide an immediate real-time alert to the SA
     and ISSO, at a minimum, of all audit failure events requiring real-time alerts.
-  status: inherently met
+  status: manual
   check: |-
     Verify that the AlertManager config includes a configured receiver. 
 
