OCP4 STIG: Cover SRG-APP-000246-CTR-000605 and SRG-APP-000435-CTR-001070
- Rename project_config_network_policy to project_config_has_template, move to the openshift/general group
- Add new rule project_template_resource_quota that checks that project
  templates set ResourceQuotas
- Combine those two into a new rule project_config_and_template_resource_quota
- For some reason, the current STIG draft mandates per-project quotas
  and doesn't allow cluter-wide quotas. Therefore we remove the SRGs
  from resource_requests_quota_cluster

--- a/applications/openshift/general/project_config_has_template/rule.yml
+++ b/applications/openshift/general/project_config_has_template/rule.yml
@@ -33,7 +33,8 @@ ocil: |-
     <pre>oc get project.config.openshift.io/cluster -ojsonpath="{.spec.projectRequestTemplate.name}"</pre>
 
 references:
-    srg: SRG-APP-000039-CTR-000110
+    nist: AC-4,SC-5,SC-5(1)
+    srg: SRG-APP-000039-CTR-000110,SRG-APP-000246-CTR-000605,SRG-APP-000435-CTR-001070
 
 identifiers:
       cce@ocp4: CCE-86172-4
