--- a/applications/openshift/general/resource_requests_quota_per_project/rule.yml
+++ b/applications/openshift/general/resource_requests_quota_per_project/rule.yml
@@ -44,8 +44,8 @@ identifiers:
   cce@ocp4: CCE-90582-8
 
 references:
-  nist: SC-5,SC-5(1),SC-5(2)
-  srg: SRG-APP-000246-CTR-000605,SRG-APP-000435-CTR-001070
+  nist: SC-5,SC-5(1),SC-5(2),SI-16
+  srg: SRG-APP-000246-CTR-000605,SRG-APP-000435-CTR-001070,SRG-APP-000450-CTR-001105
 
 {{% set resourcequotas_api_path = '/api/v1/resourcequotas' %}}
 {{% set namespaces_api_path = '/api/v1/namespaces' %}}
