--- a/controls/srg_ctr/SRG-APP-000435-CTR-001070.yml
+++ b/controls/srg_ctr/SRG-APP-000435-CTR-001070.yml
@@ -6,6 +6,7 @@ controls:
     of denial-of-service (DoS) attacks by employing organization-defined security
     safeguards.
   rules:
-  - resource_requests_quota
+  - project_config_and_template_resource_quota
+  - resource_requests_quota_per_project
   - routes_rate_limit
   status: automated
