--- a/controls/srg_ctr/SRG-APP-000450-CTR-001105.yml
+++ b/controls/srg_ctr/SRG-APP-000450-CTR-001105.yml
@@ -5,4 +5,6 @@ controls:
   title: {{{ full_name }}} must implement organization-defined security safeguards
     to protect system CPU and memory from resource depletion and unauthorized code
     execution.
-  status: pending
+  status: automated
+  rules:
+  - resource_requests_quota_per_project
